--- a/css/converse.css
+++ b/css/converse.css
@@ -1094,7 +1094,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1896px) {
     #conversejs {
       margin: 0;
       right: 10px;
@@ -1158,7 +1158,7 @@
     #conversejs {
       width: 100%;
       width: 100vw; } }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1896px) {
     #converse-embedded-chat,
     #conversejs {
       width: 100%;
@@ -1399,7 +1399,7 @@
     #converse-embedded-chat .flyout,
     #conversejs .flyout {
       border-radius: 0; } }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1896px) {
     #converse-embedded-chat .flyout,
     #conversejs .flyout {
       border-radius: 0; } }
@@ -1407,7 +1407,7 @@
     #converse-embedded-chat .flyout,
     #conversejs .flyout {
       bottom: 0; } }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1896px) {
     #converse-embedded-chat .flyout,
     #conversejs .flyout {
       bottom: 0; } }
@@ -1426,7 +1426,7 @@
     #conversejs .chat-head {
       border-top-left-radius: 0;
       border-top-right-radius: 0; } }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1896px) {
     #converse-embedded-chat .chat-head,
     #conversejs .chat-head {
       border-top-left-radius: 0;
@@ -1481,12 +1481,12 @@
     #converse-embedded-chat .chatbox,
     #conversejs .chatbox {
       margin: 0;
-      width: 100%; } }
-  @media screen and (max-width: 480px) {
+      width: calc(100vw - 25px); } }
+  @media screen and (max-width: 1896px) {
     #converse-embedded-chat .chatbox,
     #conversejs .chatbox {
       margin: 0;
-      width: 100%; } }
+      width: calc(100vw - 25px); } }
   #converse-embedded-chat .chatbox .box-flyout,
   #conversejs .chatbox .box-flyout {
     background-color: white;
@@ -1496,18 +1496,18 @@
     min-width: 200px;
     width: 200px;
     z-index: 1; }
-    @media screen and (max-height: 450px) {
+    @media all and (max-height: 450px) {
       #converse-embedded-chat .chatbox .box-flyout,
       #conversejs .chatbox .box-flyout {
         height: 400px;
-        width: 100%;
-        height: 100vh; } }
-    @media screen and (max-width: 480px) {
+        width: calc(100vw - 25px);
+        height: 98vh; } }
+    @media all and (max-width: 1896px) {
       #converse-embedded-chat .chatbox .box-flyout,
       #conversejs .chatbox .box-flyout {
         height: 400px;
-        width: 100%;
-        height: 100vh; } }
+        width: calc(100vw - 25px);
+        height: 98vh; } }
   #converse-embedded-chat .chatbox .chat-title,
   #conversejs .chatbox .chat-title {
     color: white;
@@ -1533,7 +1533,7 @@
       #conversejs .chatbox .chat-body {
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0; } }
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 1896px) {
       #converse-embedded-chat .chatbox .chat-body,
       #conversejs .chatbox .chat-body {
         border-bottom-left-radius: 0;
@@ -1651,7 +1651,7 @@
       #converse-embedded-chat .chatbox form.sendXMPPMessage,
       #conversejs .chatbox form.sendXMPPMessage {
         width: 100%; } }
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 1896px) {
       #converse-embedded-chat .chatbox form.sendXMPPMessage,
       #conversejs .chatbox form.sendXMPPMessage {
         width: 100%; } }
@@ -1809,7 +1809,7 @@
 
 #conversejs #controlbox {
   margin-right: 1em; }
-  @media screen and (max-width: 480px) {
+  @media screen and (max-width: 1896px) {
     #conversejs #controlbox {
       margin: 0; } }
   @media screen and (max-height: 450px) {
@@ -1827,7 +1827,7 @@
       #conversejs #controlbox .controlbox-head {
         border-top-left-radius: 0;
         border-top-right-radius: 0; } }
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 1896px) {
       #conversejs #controlbox .controlbox-head {
         border-top-left-radius: 0;
         border-top-right-radius: 0; } }
@@ -2274,11 +2274,11 @@
   @media screen and (max-height: 450px) {
     #converse-embedded-chat .chatroom,
     #conversejs .chatroom {
-      width: 100%; } }
-  @media screen and (max-width: 480px) {
+      width: calc(100vw - 25px); } }
+  @media screen and (max-width: 1896px) {
     #converse-embedded-chat .chatroom,
     #conversejs .chatroom {
-      width: 100%; } }
+      width: calc(100vw - 25px); } }
   #converse-embedded-chat .chatroom .box-flyout,
   #conversejs .chatroom .box-flyout {
     min-width: 300px;
@@ -2287,13 +2287,13 @@
       #converse-embedded-chat .chatroom .box-flyout,
       #conversejs .chatroom .box-flyout {
         height: 400px;
-        width: 100%;
+        width: calc(100vw - 25px);
         height: 100vh; } }
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 1896px) {
       #converse-embedded-chat .chatroom .box-flyout,
       #conversejs .chatroom .box-flyout {
         height: 400px;
-        width: 100%;
+        width: calc(100vw - 25px);
         height: 100vh; } }
     #converse-embedded-chat .chatroom .box-flyout .chatroom-body,
     #conversejs .chatroom .box-flyout .chatroom-body {
