--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -48,8 +48,8 @@ $chatbox-border-radius: 4px !default;
 $bottom-gutter-height: 35px !default;
 $chatbox-hover-height: 6px !default;
 
-$mobile_landscape_height: 450px !default;
-$mobile_portrait_length: 480px !default;
+$mobile-landscape-height: 450px !default;
+$mobile-portrait-length: 1896px !default;
 
 $font-size-tiny: 10px !default;
 $font-size-small: 12px !default;
@@ -64,7 +64,8 @@ $chat-height: 450px !default;
 $chat-gutter: 0.5em !default;
 $minimized-chats-width: 130px !default;
 
-$mobile-chat-width: 100% !default;
+//$mobile-chat-width: 100% !default;
+$mobile-chat-width: calc(100vw - 25px) !default;
 $mobile-chat-height: 400px !default;
 $small-mobile-chat-height: 300px !default;
 
