--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -68,6 +68,7 @@ $minimized-chats-width: 130px !default;
 $mobile-chat-width: calc(100vw - 25px) !default;
 $mobile-chat-height: 400px !default;
 $small-mobile-chat-height: 300px !default;
+$mobile-chat-height-vh: calc(100vh - 18px) !default;
 
 $font-path: "../fonticons/fonts/" !default;
 
